# battle-stocks

./: project-agreement.md
battle-stocks/: .coverage  .gitignore  README.md  project-agreement.md  pyproject.toml  pytest.ini  requirements.md
battle-stocks/battle_stocks/: bank.py  portfolio.py  prompt.py  stock.py  user.py
battle-stocks/battle_stocks/classes/: bank.py  colors.py  input_validation.py  plot.py  portfolio.py  prompt.py  stock.py  transaction.py  user.py
battle-stocks/battle_stocks/sample_data/: Mock_Stock.json
battle-stocks/battle_stocks/scripts/: main.py  validate_transaction.py
battle-stocks/battle_stocks/utils/: Constants.py  Stock_Schema.py  constants.py  data.py  scraping.py  sp_500.py  sp_500_dict.py
battle-stocks/examples/: plotting_example.py
battle-stocks/tests/: test_bank.py  test_battle_stocks.py  test_plot.py  test_portfolio.py  test_prompt.py  test_scraping.py  test_transaction.py  test_user.py  test_validate_transaction.py
